--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-tensorflow
-python==3.9
-tensorflow-recommenders
-tensorflow-datasets
-numpy
-pandas
-streamlit
-matplotlib
-scann
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+matplotlib=3.4.3
+numpy=1.19.5
+pandas=1.3.3
+python=3.9.0
+scikit-learn=1.0
+scipy=1.7.1
+streamlit=0.81.1
+tensorboard=2.6.0
+tensorflow-datasets=4.4.0
+tensorflow-recommenders=0.3.0
+
